# Robotics

module02/ex01/: .bashrc
module02/ex03/alexandra_pkg/: package.xml  setup.cfg  setup.py
module02/ex04/: colcon_build.txt
module02/ex05/: rosnode_info.txt  rosnode_list.txt
module02/ex06/: cmd_vel.txt
module02/ex08/: rqt_console.csv  three_turtles.launch.py
module02/ex09/fullname_pkg/: CMakeLists.txt  package.xml
module02/ex10/install/: local_setup.sh  setup.sh
module02/ex10/install/text_to_cmd_vel/share/text_to_cmd_vel/: package.sh  package.xml
module02/ex10/log/: latest_build
module02/ex10/text_to_cmd_vel/: setup.py
module02/install/: local_setup.sh  setup.sh
module02/log/: latest_build
module03/: README.md
module03/ex01/service_full_name/: CMakeLists.txt
module03/ex01/tutorial_interfaces/: CMakeLists.txt
module03/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
module03/ex03/: doctor.txt
module03/ex05/action_cleaning_robot/: CMakeLists.txt
module03/ex05/action_cleaning_robot/action/: CleaningTask.action
module03/ex05/action_cleaning_robot/scripts/: cleaning_action_client.py  cleaning_action_server.py
module03/install/: local_setup.sh  setup.sh
module03/log/: latest_build
module04/ex01/: frames_2025-11-30_20.17.07.gv  last_transform.txt  transform.txt
module04/ex02/carrot_tf2_py/: package.xml  setup.cfg  setup.py
module04/ex02/carrot_tf2_py/carrot_tf2_py/: carrot_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
module04/ex02/carrot_tf2_py/config/: carrot.rviz
module04/ex02/carrot_tf2_py/launch/: carrot_demo.launch.py
module04/ex02b/src/turtle_multi_target/: CMakeLists.txt  package.xml
module04/ex02b/src/turtle_multi_target/scripts/: target_switcher.py
module05/ex01/: robot.urdf  robot_display.launch.py
module05/ex02/: config.rviz  robot.urdf  robot.urdf.xacro  robot_display.launch.py
module05/ex03/: robot.gazebo.xacro  robot.urdf.xacro  robot_gazebo.launch.py
module05/ex04/: circle_movement.launch.py  circle_movement.py  robot.gazebo.xacro  robot_gazebo.launch.py
module05/ex05/: README.md  movement_patterns.py  robot.urdf.xacro  unique_robot.launch.py
module06/ex01/: robot.gazebo.xacro  robot.urdf.xacro  robot_lidar.launch.py
module06/ex02/: robot.gazebo.xacro  robot.urdf.xacro  robot_depth_camera.launch.py
module06/ex03/: bridge.yaml  bridge_config.yaml  frames_2025-12-19_13.51.22.gv  robot_imu.launch.py
module06/ex04/: frames_2025-12-21_16.06.18.gv  frames_2025-12-21_16.17.09.gv  frames_2025-12-21_16.19.20.gv  frames_2025-12-21_16.24.35.gv  frames_2025-12-21_17.10.16.gv  lidar_stop.py  robot.gazebo.xacro  robot.urdf.xacro  robot_lidar_stop.launch.py
module06/ex05/: bridge_camera.yaml  depth_stop.py  depth_stop_cloud.py  depth_to_cloud.py  robot_depth_stop.launch.py
(+98 files in other folders)
