<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carrot_tf2_py</name>
  <version>0.0.0</version>
  <description>Carrot TF2 demo with dynamic frame broadcaster and listener</description>
  <maintainer email="a.agapova1@g.nsu.ru">Alexandra</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
