<?xml version="1.0"?>
<package format="3">
  <name>text_to_cmd_vel</name>
  <version>0.0.1</version>
  <description>Node converting text commands into geometry_msgs/Twist messages</description>
  <maintainer email="a.agapova1@g.nsu.ru">alexandra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
